# chat-server

./: .gitignore  Cargo.toml
src/: config.rs  lib.rs  main.rs  state.rs
src/api/: login.rs  me.rs  messages.rs  mod.rs  register.rs  rooms.rs  ws.rs
src/db/: messages.rs  mod.rs  room_users.rs  rooms.rs  user.rs  users.rs
src/entity/: message.rs  mod.rs  room.rs  room_user.rs  user.rs  users.rs
src/middleware/: auth.rs  mod.rs  room_auth.rs
src/utils/: mod.rs
src/ws/: hub.rs  mod.rs  protocol.rs  room.rs  session.rs
tests/: db_tests.rs  integration_test.rs
