[package]
name = "chat-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
sea-orm = { version = "2.0.0-rc", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["sqlite"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
