[package]
name = "chat-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["json", "macros", "ws"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
chrono = "0.4.45"
futures = "0.3.32"
rand = { version = "0.10.1", features = ["thread_rng"] }
sea-orm = { version = "2.0.0-rc", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9.0", features = ["sqlite"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.11", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
axum-test = "17"
serde_json = "1"
